@@ -24,7 +24,7 @@ Základní možné hodnoty proměnné `java.security.manager` a jim odpovídají
 | -Djava.security.manager=TestovaciSM                | TestovaciSM                |
 +----------------------------------------------------+----------------------------+
 
-Poslední řádek demonstruje použití vlastní třídy objektu security managera. Jestliže je uvedena neexistující třída, skončí inicializace JVM vyjímkou a vykonávání programu nebude vůbec zahájeno.
+Poslední řádek demonstruje použití vlastní třídy objektu security managera. Způsob vytvoření vlastního Security managera bude podrobněji rozebrán v další kapitole. Jestliže je zde uvedena neexistující třída, skončí inicializace JVM vyjímkou a vykonávání programu nebude vůbec zahájeno:
 
         Error occurred during initialization of VM
         java.lang.InternalError: Could not create SecurityManager: muj.neexistujici.SecurityManager
@@ -35,13 +35,56 @@ Poslední řádek demonstruje použití vlastní třídy objektu security manage
 
 Je tedy naplněn bezpečnostní princip, podle kterého musí systém zůstat bezpečný i v případě poruchového stavu, v tomto případě chybné konfigurace security managera, i za cenu nefunkčnosti dané aplikace.
 
-*TODO: příklad vlastního security managera*
+### Implementace vlastního Security managera ###
 
-## Bezpečnostní politiky ##
+V této podkapitole bude vysvětlen způsob vytvoření vlastní třídy Security managera za účelem stanovení vlastní bezpečnostní politiky (v širším slova smyslu). Jak se dozvíme později, vytvoření vlastního Security managera není pro stanovení vlastní bezpečnostní politiky nezbytné, umožňuje ale založit rozhodování o povolení nebo nepovolení operace na takřka jakémkoli algoritmu.
 
-Bezpečnostní politika je tedy definována Security managerem. Rozhodování Security manageru ale může být založeno takřka na jakémkoli algoritmu, klidně i v závislosti na konfiguraci načtené ze souboru, čímž se otvírá cesta ke snadnému definování bezpečnostní politiky.
+`SecurityManager` (resp. `java.lang.SecurityManager`) poskytuje rozhraní skrze které je Java API schopno zjistit, zdali je operace požadovaná uživatelskou aplikací povolena. Algoritmus který Java API používá při provádění potenciálně nebezpečné operace je následující:
 
-Výchozí Security manager Javy implicitně nepovoluje žádnou operaci, vyjma těch jež jsou v konfiguračním souboru security managera explicitně povoleny. Tento soubor nazýváme souborem bezpečnostní politiky (Policy file).
+1. Uživatelská aplikace žádá Java API o provedení dané operace
+2. Java API se dotáže Security manageru zda operaci povolit zavoláním patřičné metody Security manageru.
+3. Nemá-li být operace povolena, vyhodí Security manager vyjímku, zpravidla `SecurityException`, která je předána uživatelské aplikaci
+4. Není-li vyhozena žádná vyjímka, operace se považuje za povolenou a je provedena.
+
+{Java Security / 4.1.1. Security Managers and the Java API}
+
+Vlastní Security manager tedy vytvoříme rozšířením třídy `SecurityManager`, přičemž přepíšeme metody rozhodující o povolení akce, kterou chceme povolit, nebo pro kterou chceme stanovit vlastní algoritmus určující zda akci povolit.
+Protože standardní Security manager implicitně všechny operace zakazuje, stačí nám implementovat metody autorizující provedení operací, které chceme povolit a operacemi které nikdy povolit chtít nebudeme se nebudeme muset vůbec zabývat.
+
+Příklad níže ukazuje jednoduchý Security manager, který o povolení každé akce rozhodne na základě interakce s uživatelem. Při pokusu programu o provedení bezpečnostně-citlivé operace je na standardní výstup tohoto programu zobrazen dotaz, zda tuto operaci uživatel chce povolit. V případě pozitivní odpovědi je operace povolena, jinak je jejímu provedení vyhozením vyjímky `SecurityException` zabráněno.
+
+		public class TestovaciSM extends SecurityManager {
+			@Override
+			public void checkPermission(Permission perm) {
+				
+				System.out.println("Povolit "+perm.toString()+" ?");
+				if(!askUser()){ // jestliže uživatel nezvolí "ano"
+					throw new SecurityException("Operace byla zakázána uživatelem");
+				}
+				
+			}
+		}
+
+Tento příklad je samozřejmě pouze demonstrativní, zbytečně obtěžuje uživatele požadováním povolení operací, které jsou nezbytné pro spuštění sebejednodušší aplikace. Po rozšíření o ukládání povolených operací by ale mohl najít praktické uplatnění i podobně jednoduchý Security manager, který by po rozšíření o grafické uživatelské rozhraní mohl fungovat na podobných principech uživatelského rozhraní, na kterých v současnosti fungují interaktivní firewally.
+
+*** Todo: Bezpečnostní kontext (codebase, principals) ***
+
+## Soubor bezpečnostní politiky ##
+
+Bezpečnostní politika v širším slova smyslu je tedy definována Security managerem a rozhodování Security manageru může být založeno takřka na jakémkoli algoritmu. Tento rozhodovací algoritmus může své rozhodování založit i na datech načtených ze souboru, čímž se otvírá cesta k mnohem snazší způsob definice bezpečnostní politiky, nevyžadující po administrátorech naprogramování vlastního Security managera nebo jiných tříd v Javě.
+
+O standardním Security manageru bylo dosud řečeno jen to, že implicitně nepovoluje žádnou potenciálně nebezpečnou operaci. Přesněji řečeno nepovoluje žádnou operaci, jejíž povolení nebo znemožnění je v kompetenci Security manageru.
+
+Standardní Security manager je ale ve skutečnosti právě takovým Security managerem, jaký jsme si právě popsali. Zdali operaci provést či nikoliv rozhoduje na základě takzvaného souboru bezpečnostní politiky. Tento soubor přiřazuje různým kontextům operace, které je v nich možné provádět. Není-li tedy soubor bezpečnostní politiky nastaven, nepovoluje Security manager žádnou operaci, jak už jsme mohli vidět dříve při jeho použití bez nastavení souboru bezpečnostní politiky. Způsob provedení tohoto nastavení si ukážeme nyní.
+
+Bezpečnostní politika která bude použita může být nastavena podobně jako třída použitého Security manageru, skrze konfigurační proměnnou (property) JVM `java.security.policy`, do které bude uložena adresa souboru s bezpečnostní politikou, kterou by měl standardní Security manager uplatnit.
+
+`java -Djava.security.manager=default -Djava.security.policy=mojePolitika.policy ProgramABC`
+
+{http://docs.oracle.com/javase/7/docs/technotes/guides/security/PolicyFiles.html}
+
+
+
 
 
 
